Update api types
